Clean up the kdc.conf template with full timestamps.

--- a/tmpl/kdc.conf.tmpl
+++ b/tmpl/kdc.conf.tmpl
@@ -8,11 +8,9 @@
   acl_file = /var/kerberos/krb5kdc/kadm5.acl
   dict_file = /usr/share/dict/words
   admin_keytab = /var/kerberos/krb5kdc/kadm5.keytab
-#  default_principal_flags = renewable
   default_principal_flags = +renewable, +forwardable
-  max_life = 1d
-  max_renewable_life = 7d
-
+  max_life = 1d 0h 0m 0s
+  max_renewable_life = 7d 0h 0m 0s
   # WARNING: aes256-ct:normal requires the enhanced security JCE policy file to
   # be installed.
   #supported_enctypes = aes256-cts:normal aes128-cts:normal des3-hmac-sha1:normal arcfour-hmac:normal des-hmac-sha1:normal des-cbc-md5:normal des-cbc-crc:normal
