--- a/services/tmpl/kadm5.acl.tmpl
+++ b/services/tmpl/kadm5.acl.tmpl
@@ -11,6 +11,7 @@ cloudera-scm@@@kdc_realm@@ * kafka/*@@@kdc_realm@@
 cloudera-scm@@@kdc_realm@@ * kafka_mirror_maker/*@@@kdc_realm@@
 cloudera-scm@@@kdc_realm@@ * mapred/*@@@kdc_realm@@
 cloudera-scm@@@kdc_realm@@ * oozie/*@@@kdc_realm@@
+cloudera-scm@@@kdc_realm@@ * sentry/*@@@kdc_realm@@
 cloudera-scm@@@kdc_realm@@ * solr/*@@@kdc_realm@@
 cloudera-scm@@@kdc_realm@@ * spark/*@@@kdc_realm@@
 cloudera-scm@@@kdc_realm@@ * sqoop/*@@@kdc_realm@@
